--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -31,7 +31,7 @@ jobs:
         os:
           - ubuntu-latest
           - macOS-latest
-            #- windows-latest
+          - windows-latest
 
     steps:
       - uses: actions/checkout@v2
